--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <!-- Form-group -->
       <div class="form-group row ">
         <!-- Row 1 -->
-        <div class="col-5 mt-4">
+        <div class="col-sm-5 col-12 mt-4">
           Card # <br>
           <input type="number" placeholder="XXXXXXXXXXXXXX" class="input-group input-group-lg mt-2">
         </div>
-        <div class="col-3 mt-4">
+        <div class="col-sm-3 col-12 mt-4">
           CVC # <br>
           <input type="number" placeholder="0000" class="input-group input-group-lg mt-2">
         </div>
-        <div class="col-4 mt-4">
+        <div class="col-sm-4 col-12 mt-4">
           Amount <br>
           <div class="d-flex mt-2">
             <i class="fa-solid fa-dollar-sign pt-2 pe-1"></i>
@@ -47,19 +47,19 @@
 
         <!-- Row 2 -->
         <div class="col-12 mt-4 mb-2 input-group">
-          <span class="input-group-text">First name</span>
+          <span class="input-group-text col-12 col-sm-3">First name</span>
           <input type="text" aria-label="First name" class="form-control">
-          <span class="input-group-text ms-3">Last name</span>
+          <span class="input-group-text  col-12 col-sm-3">Last name</span>
           <input type="text" aria-label="Last name" class="form-control">
         </div>
 
         <!-- Row 3 -->
-        <div class="col-6 mt-4">
+        <div class="col-sm-6 col-12 mt-4">
           City <br>
           <div class="d-flex mt-2"><input type="text" class="input-group input-group-lg ">
           </div>
         </div>
-        <div class="col-3 mt-4">
+        <div class="col-sm-3 col-12 mt-4">
           State <br>
           <div class="d-flex mt-2">
             <select class="form-select form-select-sm border-secondary rounded-1" aria-label="Default select example">
@@ -75,7 +75,7 @@
           </div>
 
         </div>
-        <div class="col-3 mt-4">
+        <div class="col-sm-3 col-12 mt-4">
           Postal Code <br>
           <div class="d-flex mt-2">
             <input type="number" class="input-group input-group-lg">
@@ -97,7 +97,7 @@
               <input id="AmazonPay" type="radio" name="card">
             </div>
           </div>
-          <div class="col-6 ps-3">
+          <div class="col-sm-6 ps-3">
             Message <br>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             <p class="text-secondary">Add any notes here!</p>
